testing/tests/ui/multiple_extends.stderr
error: the previous template error derives from
 --> tests/ui/multiple_extends.rs:4:12
  |
4 | #[template(source = r#"
  |            ^^^^^^
